# IsaacLab-Arena

./: .dockerignore  .gitattributes  .gitignore  .greptile-update-test  .pre-commit-config.yaml  .pylintrc  2026_04_13_sensitivity_analysis.md  2026_04_21_color_variation_status.md  2026_04_21_variation_system_plan.md  2026_04_21_variations_user_interface.py  2026_05_11_hydra_variation_plan.md  AGENTS.md  CAP_EVAL_ONBOARDING.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING.orca.md  CONTRIBUTORS.md  README.md  README.orca.md  arena_recorder_plan.md  cfg_entry.yaml  commands.md  diag_in_scene.py  extension.toml  greptile.json  handtracking.env  isaaclab_arena.sh  kitchen_droid_placement_only.yaml  kitchen_object.yaml  kitchen_pick_and_place.yaml  kitchen_robot.yaml  kitchen_task.yaml  next_to_relation_visualization_notebook.py  potate_into_fridge_cmd.txt  pr_body.md  pyproject.toml  pytest.ini  relation_solver_visualization_notebook.py  remote_policy_v2_design.md  (+5 more)
.claude/skills/: arena-spec-template.json  commit-digest.md
.cursor/plans/: multi-agent_env_generation_80aa6835.plan.md
.cursor/rules/: cluster-h20-l20.mdc  infra-design-vetting.mdc  mooncake-review-artifacts.mdc  mooncake-review-final-pass.mdc  project-remote-policy-v2.mdc  remote-policy-image-validation.mdc
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  proposal.md  question.md
assets_local/: franka_curobo.yml
benchmarks/: README.md  benchmark_relation_solver.py
ci/: .gitlab-ci.yml  README.md
claude_tmp/: .gitignore  HANDOFF_MOONCAKE.md
cloudci/: .gitignore  CLOUDCI.md  Dockerfile  README.md  build  run
docker/: Dockerfile.gr00t_server  Dockerfile.isaac_arena  Dockerfile.isaaclab_arena  Dockerfile.lab3  Dockerfile.leapmotion_teleop  Dockerfile.vln_server  push_to_ngc.sh  requirements-remote.txt  run_and_push_docker.sh  run_docker.orca.sh  run_docker.sh  run_gr00t_server.sh  run_vln_server.sh
docs/: Makefile  README.md  VR_TELEOP_WORLD_FRAME_TRANSFORM.md  conf.py  helpers.py  index.rst  nist_vs_lift_comparison.md  requirements.txt
doctrees/: environment.pickle  index.doctree
examples/: zero_action_runner.py  zero_action_runner_notebook.py
html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
install_shells/: install.sh  pycharm.sh  python.sh  uv.sh
isaac_arena/: prototype.py
isaaclab_arena_cosmos3/: __init__.py
isaaclab_arena_curobo/: __init__.py  cuRobo-license.txt  curobo_embodiment_cfg.py  curobo_frame_utils.py  curobo_ik_utils.py  curobo_planner_utils.py  embodiment_curobo_registry.py  ik_reachability_validator.py  ik_solver.py  ik_solver_utils.py  ik_utils.py  placement_pool_ik_validation.py  simfree_ik.py  standalone_ik_layout_validator.py
isaaclab_arena_datagen/: README.md  __init__.py  audit_dynamic_extents.py  camera_handler.py  camera_trajectory.py  dynamic_object_tracker.py  generate_all_scenes.py  manifest.py  object_registry.py  pipeline.py  run_datagen.py  scene_flow.py  scene_metadata.py  segmentation_utils.py  visualize_flow2d_warp.py  visualizer.py
isaaclab_arena_dreamzero/: README.md
isaaclab_arena_environments/: __init__.py  adjust_cube_pose_environment.py  alex_open_microwave_environment.py  asset_stability_probe.py  avocadoInBowlTest.py  avocadoPnPbowltable.py  cap_asset_overrides.py  cli.py  close_drawer_environment.py  cube_goal_pose_environment.py  deformable_sphere_pick_place_environment.py  dense_clutter_environment.py  dexsuite_lift_environment.py  droid_pick_and_place_srl_environment.py  droid_tabletop_pick_and_place_environment.py  droid_v2_tabletop_pick_and_place_environment.py  droid_v3_tabletop_pick_and_place_environment.py  dynamic_balls_environment.py  example_environment_base.py  franka_articulation_environment.py  franka_put_and_close_door_environment.py  g1_agile_tabletop_apple_to_plate_environment.py  galileo_g1_locomanip_pick_and_place_environment.py  galileo_g1_locomanip_pick_and_place_environment_copy.py  galileo_g1_static_pick_and_place_environment.py  galileo_h2_static_pick_and_place_debug_environment.py  galileo_pick_and_place_environment.py  galileo_static_apple_scene.py  gr1_multi_object_put_and_close_door_environment.py  gr1_multi_object_ranch_policy_environment.py  gr1_open_microwave_environment.py  gr1_open_microwave_rl_environment.py  gr1_put_and_close_door_environment.py  gr1_rotate_stand_mixer_knob_environment.py  gr1_table_multi_object_no_collision_environment.py  gr1_turn_stand_mixer_knob_environment.py  h2_debug_stand_environment.py  ilab_open_microwave_maple_table_environment.py  ilab_pick_and_place_two_objects_maple_table_environment.py  kitchen_move_object_environment.py  (+17 more)
isaaclab_arena_examples/: isaac_sim_gr1_multi_object_ranch_policy_notebook.py
isaaclab_arena_gr00t/: gr00t_closedloop_policy.py  gr00t_remote_policy.py  policy_config.py  replay_lerobot_action_policy.py
isaaclab_arena_navila/: README.md  __init__.py  navila_server_policy.py
isaaclab_arena_openpi/: README.md
main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
osmo/: Dockerfile.gr00t_1_6  __init__.py  aggregate_experiment_results.py  arena_base.yaml  arena_experiment_submission.py  experiment_dispatcher.py  finetune.yaml  finetune_microwave.yaml  launch_arena.py  push_to_ngc.sh  submit_arena_experiment.py  submit_arena_experiment_workflow.py  submit_evaluation_workflow.py  submit_gr00t_policy_runner_workflow.py  submit_gr00t_server_workflow.py  submit_openpi_plus_policy_runner_workflow.py  submit_openpi_server_workflow.py  submit_pi0_plus_policy_runner_workflow.py  submit_zero_action_policy_runner_workflow.py
progress_tracking_visualization/: tile_episodes_with_progress.py
project/: 2026_04_24_v3_propsed_timeline.html  2026_04_24_v3_propsed_timeline.mmd  README.md
scripts/: ci_analysis.py  repro_ci_subprocess_stall.sh  warm_shader_cache.py
tools/: check_contributors.py  compute_reach_map.py  debug_alex_urdf_convert.py  fix_new_file_copyright_year.py  franka_reach_top_down.npz  pylint_relative_import_plugin.py  run_pylint_relative_imports.py  viz_reach_map_kit.py
(+2983 files in other folders)
